等待更新表结构，验证连接

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -130,14 +130,14 @@
         </nav>
         <div class="sidebar pointer_all" style="height: 100vh;">
             <ul id="bus-list">
-                <li id="1-100">
-                    <h5>1-100</h5>
-                </li>
-                <ul id="1-100-list">
+                <!-- <li id="1-100">
+                    <h6>1-100</h6>
+                </li> -->
+                <!-- <ul id="1-100-list">
 
                 </ul>
                 <li id="101-200">
-                    <h5>101-200</h5>
+                    <h6>101-200</h6>
                 </li>
                 <ul id="101-200-list">
 
@@ -153,7 +153,7 @@
                 </li>
                 <li>
                     <h5>501-600</h5>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况
