--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -96,7 +96,7 @@
                                 <p class="d-inline text-teal">{{condition[3]}}</p>
                                 <p class="d-inline">血氧：</p>
                                 <p class="d-inline text-teal">{{condition[4]}}</p>
-                                <p class="d-inline">酒精是否超标：</p>
+                                <p class="d-inline">酒精：</p>
                                 <p class="d-inline text-teal">{{alcohol}}</p>
                             </p>
                         </div>
