添加部分数据标红预警

--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -89,13 +89,13 @@
                         <div class="text-dark-teal" id="con">
                             <p class="bottom">
                                 <p class="d-inline">心率：</p>
-                                <p class="text-teal d-inline">{{condition[0]}}</p>
+                                <p class="text-teal d-inline" :style="{color : color[0]}">{{condition[0]}}</p>
                                 <p class="d-inline">血压：</p>
-                                <p class="text-teal d-inline">{{condition[2]}} </p>
+                                <p class="text-teal d-inline" :style="{color : color[2]}">{{condition[2]}} </p>
                                 <p class="d-inline">体温：</p>
-                                <p class="d-inline text-teal">{{condition[3]}}</p>
+                                <p class="d-inline text-teal" :style="{color : color[3]}">{{condition[3]}}</p>
                                 <p class="d-inline">血氧：</p>
-                                <p class="d-inline text-teal">{{condition[4]}}</p>
+                                <p class="d-inline text-teal" :style="{color : color[4]}">{{condition[4]}}</p>
                                 <p class="d-inline">酒精是否超标：</p>
                                 <p class="d-inline text-teal">{{alcohol}}</p>
                             </p>
