--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -95,9 +95,9 @@
                                 <p class="d-inline">体温：</p>
                                 <p class="d-inline text-teal">{{condition[3]}}</p>
                                 <p class="d-inline">血氧：</p>
-                                <p class="d-inline text-teal">{{condition[4]}}</p>
-                                <p class="d-inline">酒精是否超标：</p>
-                                <p class="d-inline text-teal">{{alcohol}}</p>
+                                <p class="d-inline text-teal" :style="{color : color[4]}">{{condition[4]}}</p>
+                                <p class="d-inline">酒精：</p>
+                                <p class="d-inline text-teal" :style="{color : color[5]}">{{alcohol}}</p>
                             </p>
                         </div>
                         <h5 class="text-dark-teal">实时图像</h5>
@@ -105,31 +105,31 @@
                             <div class="wrapper bottom">
                                 <p class="bottom">抽烟</p>
                                 <!-- <canvas class="bottom" id="rectangle0" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[0]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[0]}">{{possible[0]}}</p>
                                 <p class="bottom">闭眼</p>
                                 <!-- <canvas class="bottom" id="rectangle1" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[1]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[1]}">{{possible[1]}}</p>
                                 <p class="bottom">打哈欠</p>
                                 <!-- <canvas class="bottom" id="rectangle2" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[2]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[2]}">{{possible[2]}}</p>
                                 <p class="bottom">使用手机</p>
                                 <!-- <canvas class="bottom" id="rectangle3" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[3]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[3]}">{{possible[3]}}</p>
                                 <p class="bottom ">未系安全带</p>
                                 <!-- <canvas class="bottom" id="rectangle4" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[4]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[4]}">{{possible[4]}}</p>
                                 <p class="bottom">视角未看前方</p>
                                 <!-- <canvas class="bottom" id="rectangle5" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[5]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[5]}">{{possible[5]}}</p>
                                 <!-- <p class="bottom mini-text">未正确佩戴口罩</p>
                                 <canvas class="bottom" id="rectangle6" width="100px" height="10px"></canvas>
                                 <p class="bottom">{{possible[6]}}</p> -->
                                 <p class="bottom">双手离开方向盘</p>
                                 <!-- <canvas class="bottom" id="rectangle7" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[7]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[7]}">{{possible[7]}}</p>
                                 <p class="bottom">司机乘客冲突</p>
                                 <!-- <canvas class="bottom" id="rectangle6" width="100px" height="10px"></canvas> -->
-                                <p class="bottom text-teal">{{possible[6]}}</p>
+                                <p class="bottom text-teal" :style="{color : color[6]}">{{possible[6]}}</p>
                             </div>
                         </div>
                     </div>
@@ -146,23 +146,23 @@
                             <div id="record" class="text-dark-teal">
                                 <div class="wrapper-danger bottom">
                                     <p class="bottom">抽烟：</p>
-                                    <p class="bottom text-teal">{{record[0]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[0]}">{{record[0]}}次</p>
                                     <p class="bottom">闭眼：</p>
-                                    <p class="bottom text-teal">{{record[1]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[1]}">{{record[1]}}次</p>
                                     <p class="bottom">打哈欠:</p>
-                                    <p class="bottom text-teal">{{record[2]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[2]}">{{record[2]}}次</p>
                                     <p class="bottom ">使用手机:</p>
-                                    <p class="bottom text-teal">{{record[3]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[3]}">{{record[3]}}次</p>
                                     <p class="bottom ">未系安全带：</p>
-                                    <p class="bottom text-teal">{{record[4]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[4]}">{{record[4]}}次</p>
                                     <p class="bottom ">视角未看前方：</p>
-                                    <p class="bottom text-teal">{{record[5]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[5]}">{{record[5]}}次</p>
                                     <!-- <p class="bottom mini-text">未正确佩戴口罩：</p>
                                     <p class="bottom">0次</p> -->
                                     <p class="bottom ">双手离开方向盘：</p>
-                                    <p class="bottom text-teal">{{record[6]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[6]}">{{record[6]}}次</p>
                                     <p class="bottom ">司机乘客冲突：</p>
-                                    <p class="bottom text-teal">{{record[7]}}次</p>
+                                    <p class="bottom text-teal" :style="{color : color[7]}">{{record[7]}}次</p>
                                 </div>
                             </div>
                         </div>
