前端弹窗预警

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -66,22 +66,17 @@
 
     <!-- 左下角语音消息弹窗模板 -->
     <template>
-        <div class=" pop-panel pop-fix-position" onclick="clearMsgCard()" name ="pop-window" style="bottom :0px">
-            <div class="panel-heading">
+        <div class=" pop-panel pop-fix-position" onclick="clearMsgCard()" name ="pop-window" style="bottom :10px">
+            <div class="panel-heading-weak">
                 <a href="info.html" target="_blank" class="panel-title" id="title">司机名字 | 8路 | 车牌号</a>
             </div>
 
             <ul class="list-group">
                 <li class="driver-list-group-item">
-                    <audio controls style="width: 98%;" id="0">
+                    <audio controls style="width: 98%; height: 45px;color: rgba(0,0,0,0.5);" id="0">
                         <source src="./media/audio/music.mp3" type = "audio/mpeg" >
                         您的浏览器不支持 audio 元素
                     </audio>
-                </li>
-                <li class="driver-list-group-item">
-                    <p>语音转文字音转音转文字</p>
-                </li>
-                <li class="driver-list-group-item">
                     <button class="pop-btn">立即联系</button>
                 </li>
             </ul>                       
@@ -91,15 +86,13 @@
     <div id="pop-msg-group"></div>
     <!-- 弱警报模板 -->
     <template>
-    <div class=" pop-panel pop-fix-position" onclick="clearMsgCard()" name ="pop-weak-alert" style="bottom :0px">
-        <div class="panel-heading">
+    <div class=" pop-panel pop-fix-position" onclick="clearMsgCard()" name ="pop-weak-alert" style="bottom :10px">
+        <div class="panel-heading-weak">
             <a href="info.html" target="_blank" class="panel-title" id="title">司机名字 | 8路 | 车牌号</a>
         </div>
         <ul class="list-group">        
             <li class="driver-list-group-item" >
                 <p id="alertInfo">张三血压稍高，建议持续关注。</p>
-            </li>
-            <li class="driver-list-group-item">
                 <button class="pop-btn">立即联系</button>
             </li>
         </ul>                       
