--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -68,7 +68,7 @@
     <template>
         <div class=" pop-panel pop-fix-position" onclick="clearMsgCard(this)" name ="pop-window" style="bottom :10px">
             <div class="panel-heading-weak">
-                <p class="panel-title" id="title">司机名字 | 8路 | 车牌号</p>
+                <p class="panel-title" id="title" style="display: inline;">司机名字 | 8路 |<p id="busId-audio" style="display: inline;">车牌号</p></p>
             </div>
 
             <ul class="list-group">
@@ -77,7 +77,7 @@
                         <source src="./media/audio/music.mp3" type = "audio/mpeg" >
                         您的浏览器不支持 audio 元素
                     </audio>
-                    <button class="pop-btn" style="margin: 0px 10px;" onclick="detail()">查看详情</button>
+                    <button class="pop-btn" style="margin: 0px 10px;" onclick="detail(document.getElementById('busId-audio'))">查看详情</button>
                     <button class="pop-btn" >立即联系</button>
                 </li>
             </ul>                       
@@ -89,12 +89,12 @@
     <template>
     <div class=" pop-panel pop-fix-position" onclick="clearMsgCard(this)" name ="pop-weak-alert" style="bottom :10px">
         <div class="panel-heading-weak">
-            <p class="panel-title" id="title">司机名字 | 8路 | 车牌号</p>
+            <p class="panel-title" id="title" style="display: inline;">司机名字 | 8路 | <p id="busId-weak" style="display: inline;">车牌号</p></p>
         </div>
         <ul class="list-group">        
             <li class="driver-list-group-item" >
                 <p id="alertInfo">张三血压稍高，建议持续关注。</p>
-                <button class="pop-btn" style="margin: 0px 10px;" onclick="detail()">查看详情</button>
+                <button class="pop-btn" style="margin: 0px 10px;" onclick="detail(document.getElementById('busId-weak'))">查看详情</button>
                 <button class="pop-btn">立即联系</button>
             </li>
         </ul>                       
