--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -65,8 +65,9 @@
     </div> -->
 
     <!-- 左下角语音消息弹窗模板 -->
+    <!-- onclick="clearMsgCard(this)" -->
     <template>
-        <div class=" pop-panel pop-fix-position" onclick="clearMsgCard(this)" name ="pop-window" style="bottom :10px">
+        <div class=" pop-panel pop-fix-position" name="pop-window" style="bottom :10px">
             <div class="panel-heading-weak">
                 <p class="panel-title" id="title" style="display: inline;">司机名字 | 8路 |<p id="busId-audio" style="display: inline;">车牌号</p></p>
             </div>
@@ -77,8 +78,10 @@
                         <source src="./media/audio/music.mp3" type = "audio/mp3" >
                         您的浏览器不支持 audio 元素
                     </audio>
-                    <button class="pop-btn" style="margin: 0px 10px;" onclick="detail(document.getElementById('busId-audio'))">查看详情</button>
-                    <button class="pop-btn" >立即联系</button>
+                    <button class="pop-btn" style="margin: 0px 3px;" onclick="detail(document.getElementById('busId-audio'))">查看详情</button>
+                    <button class="pop-btn record" style="margin: 0px 3px;">立即联系</button>
+                    <button class="pop-btn send" style="display: none;" >发送</button>
+                    <audio controls="" style="display: none;" class="audio-manager" src=""></audio>
                 </li>
             </ul>                       
         </div> 
@@ -95,7 +98,7 @@
         <ul class="list-group">        
             <li class="driver-list-group-item" >
                 <p id="alertInfo">张三血压稍高，建议持续关注。</p>
-                <button class="pop-btn" style="margin: 0px 10px;" onclick="detail(document.getElementById('busId-weak'))">查看详情</button>
+                <button class="pop-btn" style="margin: 0px 3px;" onclick="detail(document.getElementById('busId-weak'))">查看详情</button>
                 <button class="pop-btn">立即联系</button>
             </li>
         </ul>                       
