显示预警信息

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -73,7 +73,7 @@
 
             <ul class="list-group">
                 <li class="driver-list-group-item">
-                    <audio controls style="width: 98%; height: 45px;color: rgba(0,0,0,0.5);" id="0">
+                    <audio controls style="width: 98%; height: 45px;" id="0">
                         <source src="./media/audio/music.mp3" type = "audio/mp3" >
                         您的浏览器不支持 audio 元素
                     </audio>
