是否能去除

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -67,7 +67,7 @@
     <!-- 左下角语音消息弹窗模板 -->
     <!-- onclick="clearMsgCard(this)" -->
     <template>
-        <div class=" pop-panel pop-fix-position" name="pop-window" style="bottom :10px">
+        <div class=" pop-panel pop-fix-position" name="pop-window" style="bottom :10px" id="parent">
             <div class="panel-heading-weak">
                 <p class="panel-title" id="title" style="display: inline;">司机名字 | 8路 |<p id="busId-audio" style="display: inline;">车牌号</p></p>
             </div>
