--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -91,7 +91,7 @@
     <div id="pop-msg-group"></div>
     <!-- 弱警报模板 -->
     <template>
-    <div class=" pop-panel pop-fix-position" onclick="clearMsgCard(this)" name ="pop-weak-alert" style="bottom :10px">
+    <div class=" pop-panel pop-fix-position"  name ="pop-weak-alert" style="bottom :10px" id="parent">
         <div class="panel-heading-weak">
             <p class="panel-title" id="title" style="display: inline;">司机名字 | 8路 | <p id="busId-weak" style="display: inline;">车牌号</p></p>
         </div>
@@ -99,7 +99,9 @@
             <li class="driver-list-group-item" >
                 <p id="alertInfo">张三血压稍高，建议持续关注。</p>
                 <button class="pop-btn" style="margin: 0px 3px;" onclick="detail(document.getElementById('busId-weak'))">查看详情</button>
-                <button class="pop-btn">立即联系</button>
+                <button class="pop-btn record" style="margin: 0px 3px;">立即联系</button>
+                    <button class="pop-btn send" style="display: none;" >发送</button>
+                    <audio controls="" style="display: none;" class="audio-manager" src=""></audio>
             </li>
         </ul>                       
     </div>                      
